Prosty serwer odbierający wiadomości na porcie UDP i wykonujący pewną akcję co jakiś czas.

--- a/serwer/CMakeLists.txt
+++ b/serwer/CMakeLists.txt
@@ -1,6 +1,15 @@
-cmake_minimum_required(VERSION 3.1.0)
+cmake_minimum_required(VERSION 3.0.0)
 project(BombermanSerwer)
-add_executable(serwer main.cpp)
-set_property(TARGET serwer PROPERTY CXX_STANDARD 11)
-set_property(TARGET serwer PROPERTY CXX_STANDARD_REQUIRED ON)
-set_property(TARGET serwer PROPERTY CXX_EXTENSIONS OFF)
+file(GLOB Bomberman_sources
+    "*.hpp"
+    "*.cpp"
+)
+add_executable(BombermanSerwer ${Bomberman_sources})
+
+# only version 3.1.0
+# set_property(TARGET BombermanSerwer PROPERTY CXX_STANDARD 11)
+# set_property(TARGET BombermanSerwer PROPERTY CXX_STANDARD_REQUIRED ON)
+# set_property(TARGET BombermanSerwer PROPERTY CXX_EXTENSIONS OFF)
+
+# for older versions. Note - not compatible with every compiler
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
