Dodałem poruszanie się, asynchronicznie, nie powinno dzięki temu walić wałków zależnie od FPS
Do tego jeszcze większy syf w kodzie.

--- a/klient/klient.vcxproj.filters
+++ b/klient/klient.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TexArray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TexArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
