--- a/klient/klient.vcxproj
+++ b/klient/klient.vcxproj
@@ -41,13 +41,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\SDL2_ttf-2.0.12\include;..\SDL2-2.0.3\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\SDL2_gfx-1.0.1\include;..\SDL2_ttf-2.0.12\include;..\SDL2-2.0.3\include;$(IncludePath)</IncludePath>
     <LibraryPath>..\SDL2_ttf-2.0.12\lib\x86;..\SDL2-2.0.3\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\SDL2_ttf-2.0.12\include;..\SDL2-2.0.3\include;$(IncludePath)</IncludePath>
-    <LibraryPath>..\SDL2_ttf-2.0.12\lib\x86;..\SDL2-2.0.3\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\SDL2_gfx-1.0.1\include;..\SDL2_ttf-2.0.12\include;..\SDL2-2.0.3\include;$(IncludePath)</IncludePath>
+    <LibraryPath>..\SDL2_gfx-1.0.1\lib;..\SDL2_ttf-2.0.12\lib\x86;..\SDL2-2.0.3\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -78,11 +78,15 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SDL2.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2_ttf.lib;SDL2_gfx.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TexArray.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TexArray.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
