Dalej burdel w kodzie, ale działa. Pozwoliłem sobie dodać to, co było mi potrzebne po stronie serwera. Nowa grafika.

--- a/klient/klient.vcxproj
+++ b/klient/klient.vcxproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Connection.h" />
+    <ClInclude Include="EnumTypes.h" />
     <ClInclude Include="Loader.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="Packet.h" />
