--- a/klient/klient.vcxproj.filters
+++ b/klient/klient.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="Packet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EnumTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
